fixed disabled form fields in dark mode

--- a/src/app/components/productOverview/product/product.component.css
+++ b/src/app/components/productOverview/product/product.component.css
@@ -131,4 +131,8 @@ select {
     background: black;
     color: #dddddd;
   }
+  .subpage input.disabled, .subpage select.disabled, .block input.disabled, .block select.disabled{
+    background:#333333;
+    color:#999999;
+  }
 }
